--- a/module-2 components/Задача№3/public/index.html
+++ b/module-2 components/Задача№3/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>Вывод списка</title>
+	<title>Калькулятор</title>
 </head>
 
 <body>
